# i2global-todo-assignment

./: README.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 266361ded006_create_users_table.py
src/: config.py  dependencies.py  main.py
src/database/: __init__.py  base.py  setup.py
src/database/tables/: users.py
src/repository/: base.py  notes.py  users.py
src/routes/: auth.py  base.py  note.py  user.py
src/schemas/: notes.py  user.py
src/services/: auth.py  notes.py  user.py
